# telewind

./: .gitignore  BUILD.sh  Cargo.toml  Dockerfile  docker-compose.yaml
migrations/2022-11-28-092230_subscriptions/: up.sql
migrations/2022-11-29-094017_user-id-unique/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  parser.rs  schema.rs
src/snapshots/: telewind__parser__test__foo.snap
systemd/: Makefile  telewind.service
tests/: example.html  sqlite.rs
