[package]
name = "telewind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = "0.7.0"
lazy_static = "1.4.0"
regex = "1.6.0"
select = "0.5.0"
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml"] }
